feat(post): 게시글 수정 폼 및 수정 기능 구현
- 게시글 수정 페이지(/posts/{no}/edit) 추가
- 게시글 수정 기능(POST /posts/{no}/save) 구현
- 상세 페이지에서 수정 페이지로 이동하는 연동 작업 완료
- 수정 시 조회수가 증가하지 않도록 기존 조회수 증가 로직 분리 및 개선

--- a/src/main/resources/templates/post_detail.html
+++ b/src/main/resources/templates/post_detail.html
@@ -107,9 +107,11 @@
                         class="px-8 py-3 bg-white border border-gray-200 text-gray-700 font-bold rounded-xl hover:bg-gray-100 transition-all">
                         목록으로
                     </button>
-                    <button class="px-8 py-3 bg-black text-white font-bold rounded-xl hover:bg-gray-800 transition-all">
+                    <button th:onclick="|location.href='/posts/${post.no}/edit'|"
+                        class="px-8 py-3 bg-black text-white font-bold rounded-xl hover:bg-gray-800 transition-all">
                         수정하기
                     </button>
+
                 </div>
             </div>
         </div>
