--- a/src/main/resources/templates/post_new_form.html
+++ b/src/main/resources/templates/post_new_form.html
@@ -73,7 +73,8 @@
             </header>
 
             <div class="bg-white rounded-3xl border border-gray-100 samsung-shadow p-10">
-                <form onsubmit="alert('새 게시글 등록'); return false;">
+                <form action="/posts/add" method="POST">
+
                     <div class="space-y-8">
                         <!-- Title Field -->
                         <div>
