--- a/src/main/resources/templates/post_detail.html
+++ b/src/main/resources/templates/post_detail.html
@@ -107,10 +107,15 @@
                         class="px-8 py-3 bg-white border border-gray-200 text-gray-700 font-bold rounded-xl hover:bg-gray-100 transition-all">
                         목록으로
                     </button>
+                    <button th:onclick="|if(confirm('정말 삭제하시겠습니까?')) location.href='/posts/${post.no}/delete'|"
+                        class="px-8 py-3 bg-white border border-red-200 text-red-500 font-bold rounded-xl hover:bg-red-50 transition-all">
+                        삭제하기
+                    </button>
                     <button th:onclick="|location.href='/posts/${post.no}/edit'|"
                         class="px-8 py-3 bg-black text-white font-bold rounded-xl hover:bg-gray-800 transition-all">
                         수정하기
                     </button>
+
 
                 </div>
             </div>
